Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -321,7 +321,7 @@
     }
    ],
    "source": [
-    "\"7285553334\" # 7285553335"
+    "next = str(int('123') + 1)\"7285553334\" # 7285553335"
    ]
   },
   {
