--- a/index.ipynb
+++ b/index.ipynb
@@ -321,7 +321,7 @@
     }
    ],
    "source": [
-    "next = str(int('7285553334') + 1)\"7285553334\" # 7285553335"
+    "next = str(int('7285553334') + 1) # 7285553335"
    ]
   },
   {
