--- a/index.ipynb
+++ b/index.ipynb
@@ -306,11 +306,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7285553335"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "next = str(int(\"7285553334\") + 1) # 7285553335"
+    "int(\"7285553334\") + 1 # 7285553335"
    ]
   },
   {
